[tool.poetry]
name = "oai-enricher-service"
version = "0.1.4"
description = ""
authors = ["Eko Indarto <eko.indarto@dans.knaw.nl>"]
readme = "README.md"
include = ["resources/*", "logs/*", "conf/*"]
packages = [
    { include = "src" }
]

[project.urls]
Homepage = "http://oai-service.dans.knaw.nl"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/ekoi/oai-enricher-service"
Issues = "https://github.com/ekoi/oai-enricher-service/issues"
Changelog = "https://github.com/ekoi/oai-enricher-service/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
dynaconf = "^3.2.6"
lxml = "^5.3.0"
saxonche = "^12.5.0"
emoji = "^2.12.1"
requests = "^2.32.3"
tomli = "^2.0.1"
httpx = "^0.23.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
